# md-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: __init__.py
benchmarks/baselines/: cpu_mpi.json  cpu_serial.json  ml.json
examples/: __init__.py  quickstart.py  run_analysis.py  run_harmonic_oscillator.py  run_lj_simulation.py  run_nvt_simulation.py
mdcore/: __init__.py  plotting.py  simulate.py
mdcore/analysis/: __init__.py  base.py
mdcore/analysis/dynamics/: __init__.py  msd.py  vacf.py
mdcore/analysis/free_energy/: __init__.py
mdcore/analysis/spectroscopy/: __init__.py
mdcore/analysis/structure/: __init__.py  rdf.py
mdcore/analysis/thermodynamics/: __init__.py  energy.py  pressure.py
mdcore/benchmarks/: __init__.py  reporter.py
mdcore/engines/: __init__.py  engine.py  reporters.py
mdcore/forcefields/: __init__.py  base.py  composite.py
mdcore/forcefields/bonded/: __init__.py  angles.py  bonds.py  dihedrals.py
mdcore/forcefields/nonbonded/: __init__.py  coulomb.py  dispersion.py  lj.py  pme.py
mdcore/integrators/: __init__.py  baoab.py  barostats.py  base.py  langevin.py  respa.py  thermostats.py  velocity_verlet.py
mdcore/io/: __init__.py  base.py  checkpoint.py
mdcore/io/formats/: __init__.py  ase_adapter.py  dcd.py  pdb.py  xtc.py  xyz.py
mdcore/ml/: __init__.py  base.py  potential.py  uncertainty.py
mdcore/ml/active_learning/: __init__.py
mdcore/ml/datasets/: __init__.py
mdcore/ml/descriptors/: __init__.py
mdcore/ml/inference/: __init__.py
mdcore/ml/models/: __init__.py
mdcore/ml/trainers/: __init__.py
mdcore/neighborlists/: __init__.py  base.py  cell.py  verlet.py
mdcore/parallel/: __init__.py  dispatcher.py  domain.py
mdcore/parallel/backends/: __init__.py  base.py  mpi4py_backend.py  multiprocessing_backend.py  serial.py
mdcore/system/: __init__.py  box.py  state.py
mdcore/topology/: __init__.py  topology.py
mdcore/workflows/: __init__.py
tests/: __init__.py  test_analysis.py  test_box.py  test_engine.py  test_forcefields.py  test_integrators.py  test_io.py  test_neighborlists.py  test_parallel.py  test_smoke.py  test_state.py  test_topology.py
tests/benchmarks/: __init__.py  test_phase_a_physics.py  test_phase_b_md.py  test_phase_c_parallel.py  test_phase_d_ml.py
tests/gates/: __init__.py  test_determinism_gates.py  test_ml_gates.py  test_numerical_gates.py  test_performance_gates.py
tests/reference/: __init__.py  generate_reference.py  lj_forces.json  lj_forces.npy  lj_positions.npy  nve_energies.npy  nve_trajectory.npy
tests/validation/: __init__.py  test_analysis_validation.py  test_hybrid_ml.py  test_ml_benchmarks.py  test_regression.py
