[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdcore"
version = "0.1.0"
description = "A modular, composable molecular dynamics engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "MD Engine Contributors"}
]
keywords = ["molecular-dynamics", "simulation", "physics", "chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
torch = [
    "torch>=2.0.0",
]

[project.urls]
Repository = "https://github.com/yourusername/md-engine"

[tool.setuptools.packages.find]
include = ["mdcore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mdcore"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (l, O, I - sometimes needed in math)
    "B008",   # function call in default argument
    "B027",   # empty method in ABC without abstract decorator (optional hooks)
    "B905",   # zip without strict
    "ARG001", # unused function argument (common in ABC methods)
    "ARG002", # unused method argument
    "PIE790", # unnecessary ellipsis (we use ... in abstract methods intentionally)
    "B007",   # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",    # unused arguments in tests (fixtures)
    "F811",   # redefinition of unused name (pytest fixtures)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
